--- a/inc/customizer/custom-controls/assets/css/unminified/radio-image-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/radio-image-rtl.css
@@ -28,7 +28,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 5px;
-  grid-row-gap: 10px;
+  grid-row-gap: 5px;
 }
 
 .customize-control-ast-radio-image .ast-radio-img-svg svg {
